# graceful

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
examples/: simple.rs
graceful/: index.html  sidebar-items.js  struct.SignalGuard.html
graceful/platform/: struct.SignalGuard.html
src/: lib.rs
src/graceful/src/: lib.rs.html
