[package]
name = "graceful"
version = "0.1.0"
authors = ["Zhe Wang <0x1998@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["graceful", "shutdown", "signal"]
description = "Gracefully shutdown"
documentation = "http://0x1997.github.io/graceful"
homepage = "https://github.com/0x1997/graceful"
repository = "https://github.com/0x1997/graceful.git"

[dependencies]
nix = "^0.5.0"
kernel32-sys = "^0.2.1"